--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/tolerious/nsip#readme",
   "dependencies": {
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "xml2js": "^0.4.23"
   }
 }
